# vehicle-value-estimator

./: .flake8  .gitignore  MLproject  Makefile  README.md  conda.yaml  mypy.ini  pyproject.toml
vehicle_value_estimator/: app.py  config.py
vehicle_value_estimator/artifacts/: ml_preprocessor.pkl  rfecv_selector.pkl
vehicle_value_estimator/data_pipeline/: cleaning.py  ingest.py
vehicle_value_estimator/model/: inference.py  training.py
vehicle_value_estimator/models/: predict_model.py  train_model.py
vehicle_value_estimator/pipeline/: cleaning.py  ingest.py
vehicle_value_estimator/utils/: logger.py  model_utils.py  preprocess_transformer.py  scraping.py
